Actu challenge no terminado

--- a/module-1/lab-df-calculation-and-transformation/your-code/challenge-3.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/challenge-3.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -269,353 +269,143 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>12346</th>\n",
-       "      <td>77183.60</td>\n",
+       "      <th>14646</th>\n",
+       "      <td>280206.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12347</th>\n",
-       "      <td>4310.00</td>\n",
+       "      <th>18102</th>\n",
+       "      <td>259657.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12348</th>\n",
-       "      <td>1797.24</td>\n",
+       "      <th>17450</th>\n",
+       "      <td>194550.79</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12349</th>\n",
-       "      <td>1757.55</td>\n",
+       "      <th>16446</th>\n",
+       "      <td>168472.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12350</th>\n",
-       "      <td>334.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12352</th>\n",
-       "      <td>2506.04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12353</th>\n",
-       "      <td>89.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12354</th>\n",
-       "      <td>1079.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12355</th>\n",
-       "      <td>459.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12356</th>\n",
-       "      <td>2811.43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12357</th>\n",
-       "      <td>6207.67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12358</th>\n",
-       "      <td>1168.06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12359</th>\n",
-       "      <td>6372.58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12360</th>\n",
-       "      <td>2662.06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12361</th>\n",
-       "      <td>189.90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12362</th>\n",
-       "      <td>5226.23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12363</th>\n",
-       "      <td>552.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12364</th>\n",
-       "      <td>1313.10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12365</th>\n",
-       "      <td>641.38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12367</th>\n",
-       "      <td>168.90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12370</th>\n",
-       "      <td>3545.69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12371</th>\n",
-       "      <td>1887.96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12372</th>\n",
-       "      <td>1298.04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12373</th>\n",
-       "      <td>364.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12374</th>\n",
-       "      <td>742.93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12375</th>\n",
-       "      <td>457.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12377</th>\n",
-       "      <td>1628.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12378</th>\n",
-       "      <td>4008.62</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12379</th>\n",
-       "      <td>852.24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12380</th>\n",
-       "      <td>2724.81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18242</th>\n",
-       "      <td>2232.49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18245</th>\n",
-       "      <td>2567.06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18246</th>\n",
-       "      <td>596.10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18248</th>\n",
-       "      <td>804.02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18249</th>\n",
-       "      <td>95.34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18250</th>\n",
-       "      <td>349.27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18251</th>\n",
-       "      <td>4314.72</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18252</th>\n",
-       "      <td>526.67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18255</th>\n",
-       "      <td>103.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18257</th>\n",
-       "      <td>2337.63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18259</th>\n",
-       "      <td>2338.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18260</th>\n",
-       "      <td>2643.20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18261</th>\n",
-       "      <td>324.24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18262</th>\n",
-       "      <td>149.48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18263</th>\n",
-       "      <td>1213.16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18265</th>\n",
-       "      <td>801.51</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18268</th>\n",
-       "      <td>25.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18269</th>\n",
-       "      <td>168.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18270</th>\n",
-       "      <td>283.15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18272</th>\n",
-       "      <td>3078.58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18273</th>\n",
-       "      <td>204.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18274</th>\n",
-       "      <td>175.92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18276</th>\n",
-       "      <td>335.86</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18277</th>\n",
-       "      <td>110.38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18278</th>\n",
-       "      <td>173.90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18280</th>\n",
-       "      <td>180.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18281</th>\n",
-       "      <td>80.82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18282</th>\n",
-       "      <td>178.05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18283</th>\n",
-       "      <td>2094.88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18287</th>\n",
-       "      <td>1837.28</td>\n",
+       "      <th>14911</th>\n",
+       "      <td>143825.06</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4339 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "            amount_spent\n",
        "CustomerID              \n",
-       "12346           77183.60\n",
-       "12347            4310.00\n",
-       "12348            1797.24\n",
-       "12349            1757.55\n",
-       "12350             334.40\n",
-       "12352            2506.04\n",
-       "12353              89.00\n",
-       "12354            1079.40\n",
-       "12355             459.40\n",
-       "12356            2811.43\n",
-       "12357            6207.67\n",
-       "12358            1168.06\n",
-       "12359            6372.58\n",
-       "12360            2662.06\n",
-       "12361             189.90\n",
-       "12362            5226.23\n",
-       "12363             552.00\n",
-       "12364            1313.10\n",
-       "12365             641.38\n",
-       "12367             168.90\n",
-       "12370            3545.69\n",
-       "12371            1887.96\n",
-       "12372            1298.04\n",
-       "12373             364.60\n",
-       "12374             742.93\n",
-       "12375             457.50\n",
-       "12377            1628.12\n",
-       "12378            4008.62\n",
-       "12379             852.24\n",
-       "12380            2724.81\n",
-       "...                  ...\n",
-       "18242            2232.49\n",
-       "18245            2567.06\n",
-       "18246             596.10\n",
-       "18248             804.02\n",
-       "18249              95.34\n",
-       "18250             349.27\n",
-       "18251            4314.72\n",
-       "18252             526.67\n",
-       "18255             103.30\n",
-       "18257            2337.63\n",
-       "18259            2338.60\n",
-       "18260            2643.20\n",
-       "18261             324.24\n",
-       "18262             149.48\n",
-       "18263            1213.16\n",
-       "18265             801.51\n",
-       "18268              25.50\n",
-       "18269             168.60\n",
-       "18270             283.15\n",
-       "18272            3078.58\n",
-       "18273             204.00\n",
-       "18274             175.92\n",
-       "18276             335.86\n",
-       "18277             110.38\n",
-       "18278             173.90\n",
-       "18280             180.60\n",
-       "18281              80.82\n",
-       "18282             178.05\n",
-       "18283            2094.88\n",
-       "18287            1837.28\n",
-       "\n",
-       "[4339 rows x 1 columns]"
+       "14646          280206.02\n",
+       "18102          259657.30\n",
+       "17450          194550.79\n",
+       "16446          168472.50\n",
+       "14911          143825.06"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "orders_1= orders[['CustomerID', 'amount_spent']]\n",
     "\n",
-    "orders_1.groupby('CustomerID').sum()\n"
+    "orders_2 =orders_1.groupby('CustomerID').agg('sum').sort_values('amount_spent', ascending = False)\n",
+    "\n",
+    "display(orders_2.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amount_spent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>14646</th>\n",
+       "      <td>280206.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18102</th>\n",
+       "      <td>259657.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17450</th>\n",
+       "      <td>194550.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16446</th>\n",
+       "      <td>168472.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14911</th>\n",
+       "      <td>143825.06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "CustomerID      17912.0\n",
-       "amount_spent       67.5\n",
-       "Name: 0.95, dtype: float64"
+       "            amount_spent\n",
+       "CustomerID              \n",
+       "14646          280206.02\n",
+       "18102          259657.30\n",
+       "17450          194550.79\n",
+       "16446          168472.50\n",
+       "14911          143825.06"
       ]
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "orders_1.quantile(q=0.95, axis=0)"
+    "'''aggregate = orders.groupby(['CustomerID']).agg('sum').sort_values('amount_spent', ascending = False)\n",
+    "display(aggregate.head())\n",
+    "\n",
+    "#The first group is VIP Customers whose aggregated expenses at your global chain stores are above the 95th percentile. \n",
+    "#The second group is Preferred Customers whose aggregated expenses are between the 75th and 95th percentile.\n",
+    "\n",
+    "VIP = aggregate['amount_spent'].quantile(q=0.95)\n",
+    "VIP_customers = aggregate[aggregate['amount_spent']>=VIP]\n",
+    "VIPss= VIP_customers.reset_index()\n",
+    "VIP_customers_ID = VIPss[['CustomerID', 'amount_spent']]\n",
+    "display(VIP_customers_ID.head())\n",
+    "\n",
+    "\n",
+    "Preferred = aggregate['amount_spent'].quantile(q=0.75)\n",
+    "VIP_preferred = aggregate[aggregate['amount_spent']>=Preferred<VIP]'''\n",
+    "\n",
+    "VIP = orders_2['amount_spent'].quantile(q=0.95)\n",
+    "VIP_customers = orders_2[orders_2['amount_spent']>= VIP]\n",
+    "VIP_customers_reset = display(VIP_customers.head())"
    ]
   },
   {
@@ -629,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
